[gd_scene load_steps=7 format=3 uid="uid://oo0sx0i77w3"]

[ext_resource type="Script" path="res://scenes/quiz.gd" id="1_tj3u1"]
[ext_resource type="PackedScene" uid="uid://oqn6pb732n5a" path="res://scenes/scoreboard.tscn" id="6_eb1u5"]
[ext_resource type="FontFile" uid="uid://blxlusd64fl4c" path="res://assets/fonts/LilitaOne-Regular.ttf" id="7_yj5xb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_038wa"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_setbx"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3qdc"]
bg_color = Color(0, 0, 1, 1)
border_width_left = 50
border_width_top = 50
border_width_right = 50
border_width_bottom = 50
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[node name="round_screen" type="Panel"]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_038wa")
script = ExtResource("1_tj3u1")

[node name="main_view" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 614.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="questionboard" type="Panel" parent="main_view"]
custom_minimum_size = Vector2(1150, 530)
layout_mode = 2
size_flags_vertical = 3

[node name="question_holder" type="Node2D" parent="main_view"]

[node name="scoreboard" parent="main_view" instance=ExtResource("6_eb1u5")]
layout_mode = 2

[node name="categories_slider" type="Panel" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_top = -400.0
offset_right = 839.0
offset_bottom = -122.0
theme_override_styles/panel = SubResource("StyleBoxFlat_setbx")

[node name="hbox" type="HBoxContainer" parent="categories_slider"]
layout_mode = 0
offset_right = 942.0
offset_bottom = 179.0
theme_override_constants/separation = 0

[node name="cat0" type="Label" parent="categories_slider/hbox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("7_yj5xb")
theme_override_styles/normal = SubResource("StyleBoxFlat_o3qdc")
text = "cat 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="cat1" type="Label" parent="categories_slider/hbox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("7_yj5xb")
theme_override_styles/normal = SubResource("StyleBoxFlat_o3qdc")
text = "cat 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="cat2" type="Label" parent="categories_slider/hbox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("7_yj5xb")
theme_override_styles/normal = SubResource("StyleBoxFlat_o3qdc")
text = "cat 2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="cat3" type="Label" parent="categories_slider/hbox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("7_yj5xb")
theme_override_styles/normal = SubResource("StyleBoxFlat_o3qdc")
text = "cat 3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="cat4" type="Label" parent="categories_slider/hbox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("7_yj5xb")
theme_override_styles/normal = SubResource("StyleBoxFlat_o3qdc")
text = "cat 4"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
